--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,9 @@ body {
   font-family: "Calibri", Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #f4f8fd;
+  background: url("./Assets/to-do-list-opa.png") no-repeat;
+  background-size: 33%;
+  background-position: center;
 }
 
 code {
