Styles updated and basic functionality created

--- a/src/Components/TodoItem.css
+++ b/src/Components/TodoItem.css
@@ -18,6 +18,10 @@ li {
   margin-top: 1.3em;
 }
 
+.itemContainer .text-completed {
+  text-decoration: line-through;
+}
+
 .numbers {
   font-size: 1.2em;
   font-weight: 500;
@@ -63,6 +67,13 @@ li {
   width: 6em;
   height: 6em;
   cursor: pointer;
+}
+
+.itemContainer .check-mark-active {
+  background: url("../Assets/check-mark.png") no-repeat;
+  background-size: 100%;
+  width: 6em;
+  height: 6em;
 }
 
 .itemContainer .delete {
