--- a/src/Styles/DeleteModal.css
+++ b/src/Styles/DeleteModal.css
@@ -1,6 +1,8 @@
 .deleteModalBackground {
-  width: 100vw;
-  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   z-index: 1000;
   background-color: rgba(255, 255, 255, 0.89);
   position: fixed;
