--- a/src/Styles/DeleteModal.css
+++ b/src/Styles/DeleteModal.css
@@ -16,7 +16,7 @@
   flex-direction: column;
   width: 300px;
   height: 220px;
-  border: 5px solid #f58335;
+  border: 5px solid red;
   border-radius: 20px;
   background-color: white;
   padding: 30px;
