Minor styles update for responsiveness

--- a/src/Styles/TodoSearch.css
+++ b/src/Styles/TodoSearch.css
@@ -6,9 +6,11 @@
 }
 
 .searchContainer input {
+  text-align: center;
+  width: 320px;
   font-size: 30px;
   border-radius: 40px;
-  text-align: center;
+
   padding: 4px;
   margin-bottom: 25px;
   position: relative;
