--- a/src/Styles/EmptyTodos.css
+++ b/src/Styles/EmptyTodos.css
@@ -1,14 +1,14 @@
-.emptyTodosContainer {
+h3 {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  position: relative;
+  width: 50%;
+  font-size: 40px;
+  font-weight: 600;
   text-align: center;
-  width: 400px;
-  height: 40px;
-  margin: 210px auto;
+  margin: 20px auto;
+  padding: 10px;
+  border: 4px solid #f58335;
+  border-radius: 15px;
 }
