--- a/src/Styles/TodoItem.css
+++ b/src/Styles/TodoItem.css
@@ -108,14 +108,16 @@ li {
   .itemContainer .edit:hover {
     width: 2em;
     height: 2em;
-    top: 1.5em;
+    top: 0.7em;
+    right: 8em;
   }
 
   .itemContainer .check-mark,
   .itemContainer .check-mark:hover {
     width: 3em;
     height: 3em;
-    top: 1em;
+    top: 0.4em;
+    right: 3.9em;
   }
   .itemContainer .check-mark-active {
     width: 3em;
@@ -126,6 +128,6 @@ li {
   .itemContainer .delete:hover {
     width: 2em;
     height: 2em;
-    top: 1.4em;
+    top: 0.7em;
   }
 }
