--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -12,10 +12,11 @@
   width: 3.5em;
   height: 3.5em;
   cursor: pointer;
-  margin: 10px;
+  margin: 1em;
 }
 
 .infoContainer img {
   background-size: 100%;
   width: 150px;
+  margin: 1em;
 }
