--- a/src/Styles/TodoCount.css
+++ b/src/Styles/TodoCount.css
@@ -8,7 +8,7 @@ h1 {
   font-size: 35px;
   font-weight: 600;
   text-align: center;
-  margin: 20px;
+  margin: 0 20px 20px 20px;
   padding: 10px;
   border: 4px solid #f58335;
   border-radius: 15px;
