Flexbox improved and minor style improvements applied

--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -1,6 +1,7 @@
 .infoContainer {
   display: flex;
   justify-content: space-between;
+  width: 99%;
   align-items: center;
   margin-bottom: 15px;
 }
