--- a/src/Styles/TodoSearch.css
+++ b/src/Styles/TodoSearch.css
@@ -2,15 +2,15 @@
   display: flex;
   justify-content: center;
   position: relative;
+  width: 70%;
   margin: 20px;
 }
 
 .searchContainer input {
   text-align: center;
-  width: 320px;
+  width: 300px;
   font-size: 30px;
   border-radius: 40px;
-
   padding: 4px;
   margin-bottom: 25px;
   position: relative;
