--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -1,7 +1,8 @@
 .footerContainer {
   display: flex;
   justify-content: center;
-  margin-top: 25px;
+  width: 99%;
+  height: 50px;
 }
 
 .footerContainer p {
