--- a/src/Styles/TodoCreationButton.css
+++ b/src/Styles/TodoCreationButton.css
@@ -1,10 +1,11 @@
 .buttonContainer {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
-  position: fixed;
-  bottom: 8px;
-  right: 8px;
+  align-self: flex-end;
+  margin-top: auto;
+  height: 100%;
+  position: sticky;
+  bottom: 55px;
 }
 
 .buttonContainer button {
@@ -14,7 +15,8 @@
   border: none;
   border-radius: 50%;
   box-shadow: 2px 2px black;
-  margin-top: 10px;
+  margin-top: auto;
+  margin-right: 0.5em;
   height: 3em;
   width: 3em;
   cursor: pointer;
@@ -23,9 +25,17 @@
 .buttonContainer button:hover {
   background-color: #f58335;
   border-radius: 50%;
-  margin-top: 1em;
+  margin-top: auto;
   box-shadow: 2px 2px black;
   height: 3em;
   width: 3em;
   cursor: pointer;
+}
+
+@media (max-width: 1200px) {
+  .buttonContainer button {
+    height: 2.6em;
+    width: 2.6em;
+    margin-right: 0.4em;
+  }
 }
