--- a/src/Styles/TodoList.css
+++ b/src/Styles/TodoList.css
@@ -1,5 +1,6 @@
 .todoList {
-  margin: 0;
-  padding: 0 0 15px 0;
+  margin: 10px 10px 0 10px;
+  padding: 0 0 1px 0;
   list-style: none;
+  width: 98%;
 }
