--- a/src/Styles/InfoModal.css
+++ b/src/Styles/InfoModal.css
@@ -33,3 +33,23 @@
   text-align: center;
   padding: 12px;
 }
+
+@media (max-width: 1200px) {
+  .infoModal {
+    width: 290px;
+    height: 223px;
+  }
+
+  .infoModal p {
+    font-size: 18px;
+    padding: 10px;
+  }
+
+  .infoModal-close {
+    padding: 8px;
+  }
+
+  .infoModal-close button {
+    font-size: 18px;
+  }
+}
