--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -2,6 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 95vh;
+  min-height: 99vh;
   position: relative;
+}
+
+@media (max-width: 1200px) {
+  .app-container {
+    min-height: 95vh;
+    margin-bottom: 1px;
+  }
 }
